ch05/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: ch05
spec:
  type: ExternalName
  externalName: api.localhost.com
  ports:
    - port: 80
