ch05/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: ch05
spec:
  ports:
    - port: 80
