ch05/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
  namespace: ch05
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: http
  selector:
    app: kubia
