ch05/svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
  namespace: ch05
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      targetPort: http
    - port: 443
      name: https
      targetPort: https
  selector:
    app: kubia
