ch05/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
  namespace: ch05
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      targetPort: 8080
      nodePort: 30080
    - port: 443
      name: https
      targetPort: 8443
      nodePort: 30443
  selector:
    app: kubia
