ch05/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
  namespace: ch05
spec:
#  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: http
      name: http
    - port: 443
      targetPort: https
      name: https
  selector:
    app: kubia
